cluster/dashboard/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana
  namespace: dashboard
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  tls:
    - hosts:
        - luma.chrismiller.xyz
      secretName: luma-tls
  rules:
    - host: luma.chrismiller.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prometheus-grafana
                port:
                  number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prom
  namespace: dashboard
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  tls:
    - hosts:
        - prom.luma.chrismiller.xyz
      secretName: prom-luma-tls
  rules:
    - host: luma.chrismiller.xyz
      http:
        paths:
          - path: /graph
            pathType: Prefix
            backend:
              service:
                name: prometheus-kube-prometheus-prometheus
                port:
                  number: 9090
